fix: remove unnecessary line breaks in NTP server list display and adjust table cell width for better layout

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -87,7 +87,7 @@ li a:hover {
 
 
 #tcpdumpForm table td:nth-child(2) {
-    width: 310px;
+    width: 440px;
     border: solid 1px #ccc;
     border-radius: 5px;
     padding-right: 0px;
